996-feat: Fix one of the course labels is vertically misaligned it appears lower than the others in the dropdown list (#997)
* feat: 996 - change size max-height school-list

* feat: delete max-height

delete max-heighteight property from school menu styles.

--- a/src/widgets/school-menu/ui/school-menu/school-menu.module.scss
+++ b/src/widgets/school-menu/ui/school-menu/school-menu.module.scss
@@ -25,8 +25,6 @@
     grid-template-columns: repeat(3, 1fr);
     gap: $gap-l $gap-xl;
 
-    max-height: 408px;
-
     list-style-type: none;
 
     @include media-tablet-large {
